# CFT-RAG-2025

./: .gitignore  ABSTRACT_HIERARCHY_EXPLANATION.md  AESLC_BASELINE_VS_CUCKOO_COMPARISON.md  AESLC_BENCHMARK_FINAL.md  API_MODEL_CONFIG.md  ARCHITECTURE_LINK_DIAGRAM.md  ARCHITECTURE_REDESIGN_PLAN.md  BASELINE_ANSWER_LENGTH_ANALYSIS.md  BASELINE_FAILURE_DIAGNOSIS.md  BASELINE_NEW_PROMPT_RERUN_STATUS.md  BASELINE_NEW_PROMPT_STATUS.md  BASELINE_PROMPT_UPDATE.md  BASELINE_STATUS_REPORT.md  BENCHMARK_FINAL_REPORT.md  BENCHMARK_RESULTS_SUMMARY.md  BENCHMARK_RUNNING.md  BENCHMARK_RUNNING_STATUS.md  BENCHMARK_STATUS_100_SAMPLES.md  BUILD_ABSTRACT_CUCKOO_README.md  BUILD_RESULTS_SUMMARY.md  BUILD_SUCCESS_SUMMARY.md  BUILD_VEC_DB_ISSUE.md  CHANGELOG_MAIN2.md  CHANGES_SUMMARY.md  CHECK_KNOWLEDGE_BASE.md  CHECK_TOKEN.md  CHUNK_EXTRACTION_EXPLANATION.md  COMPILE_INSTRUCTIONS.md  COMPLETE_BENCHMARK_REPORT.md  CONCURRENT_API_OPTIMIZATION.md  CONCURRENT_OPTIMIZATION_SUMMARY.md  CUCKOO_FILTER_ADDRESS_UPDATE.md  CUCKOO_FILTER_ANALYSIS.md  CUCKOO_FILTER_CPP_UPDATE.md  CUCKOO_FILTER_ENHANCED_IMPLEMENTATION.md  CUCKOO_FILTER_ENTITIES_FILE_USAGE.md  CUCKOO_FILTER_FLOW.md  CUCKOO_FILTER_TEMPERATURE_AND_CONTEXT.md  CUCKOO_FILTER_USAGE.md  DATASET_DOWNLOAD_GUIDE_FINAL.md  (+147 more)
TRAG-cuckoofilter/: CMakeLists.txt  cuckoo_bind.cpp
TRAG-cuckoofilter/src/: cuckoofilter.h  node.h
benchmark/: ANSWERS.md  BENCHMARK_GUIDE.md  DATASET_DOWNLOAD_GUIDE.md  EVALUATION_METHODS.md  README.md  SUMMARY.md  USAGE.md  build_aeslc_index.py  build_medqa_dart_index.py  check_modelscope_datasets.py  convert_datasets.py  (+14 more)
(+222 files in other folders)
